fix overflow, tweak force field, adjust turtle

--- a/base.css
+++ b/base.css
@@ -4,6 +4,14 @@
   padding: 0;
 }
 
+html,
+body {
+  width: 100%;
+  height: 700vh;
+  font-family: "Gilroy";
+  overflow: hidden;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -12,13 +20,6 @@ body {
   padding: 0;
   overscroll-behavior: none;
   overflow: hidden;
-}
-
-html,
-body {
-  width: 100%;
-  height: 700vh;
-  font-family: "Gilroy";
 }
 
 img {
